add plugin readme file

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "husky-vue-card": "^0.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
